@@ -1,3 +1,11 @@
+2004-12-08 Bogdan Gheorghe
+	Fix for 76123
+	* src/org/eclipse/cdt/internal/ui/search/CSearchResultPage.java
+	
+	Added sorting for external file matches
+	* src/org/eclipse/cdt/internal/ui/search/LevelTreeContentProvider.jaav
+	* src/org/eclipse/cdt/ui/CSearchResultLabelProvider.java
+	
 2004-12-06 Alain Magloire
 	Fix for 79865
 	* src/org/eclipse/cdt/internal/ui/text/CHelpProviderDescriptor.java
